# Conductor

./: .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml
conductor/: __init__.py  config.py
conductor/api/: __init__.py  main.py  state.py
conductor/api/routers/: __init__.py  files.py  messages.py  projects.py
conductor/api/schemas/: __init__.py  agent.py  events.py  message.py  project.py
conductor/api/services/: __init__.py  orchestrator_bridge.py
conductor/api/websocket/: __init__.py  handler.py  manager.py
conductor/cli/: __init__.py  main.py
conductor/core/: __init__.py  agent.py  decomposer.py  executor.py  message_bus.py  models.py  orchestrator.py  secretary.py  task_queue.py
conductor/integrations/: __init__.py  claude_cli.py
conductor/notifications/: __init__.py  base.py
conductor/roles/: __init__.py  base.py
conductor/server/: __init__.py  main.py
docs/: CONDUCTOR_CLAUDE_TEMPLATE.md  FEATURE-existing-project.md  LESSONS_LEARNED.md  PRD-project-creation-flow.md  PRODUCT_SPEC.md  ROADMAP.md  ui-ux-design.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/chat/: Announcement.tsx  ChatArea.tsx  InputArea.tsx  MessageBubble.tsx
frontend/src/components/files/: FileBrowser.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/components/project/: ProjectHeader.tsx
frontend/src/components/team/: AgentCard.tsx  StatusIndicator.tsx  TeamPanel.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/services/: api.ts
frontend/src/stores/: projectStore.ts
frontend/src/types/: index.ts
tests/: __init__.py  test_task_queue.py
